--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.3",
     "astro": "^5.0.5",
-    "tailwindcss": "^3.4.16",
-    "gray-matter": "^4.0.3"
+    "gray-matter": "^4.0.3",
+    "tailwindcss": "^3.4.16"
   },
   "engines": {
     "node": ">=18.17.1"
