--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/tailwind": "^5.1.3",
     "astro": "^5.0.5",
     "gray-matter": "^4.0.3",
+    "slugify": "^1.6.6",
     "tailwindcss": "^3.4.16"
   },
   "engines": {
