--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
     "sync": "node scripts/sync-obsidian.js"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.0.2",
     "@astrojs/rss": "^4.0.10",
-    "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^5.1.3",
     "astro": "^5.0.5",
     "gray-matter": "^4.0.3",
+    "mermaid": "^11.4.1",
     "slugify": "^1.6.6",
     "tailwindcss": "^3.4.16"
   },
   "engines": {
     "node": ">=18.17.1"
+  },
+  "devDependencies": {
+    "@astrojs/mdx": "^4.0.3",
+    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/tailwind": "^5.1.4",
+    "astro-expressive-code": "^0.38.3",
+    "playwright": "^1.49.1",
+    "remark-mermaid": "^0.2.0"
   }
 }
